# vmill

./: .gitignore  .vercelignore  LICENSE  Makefile  Procfile  README.md  cnc_app.html  eslint.config.js  fly.toml  gradio_test_client.py  index.html  ocr_server.py  package-lock.json  package.json  playwright.config.ts  render.yaml  requirements.txt  requirements_ocr.txt  requirements_ocr_py313.lock.txt  requirements_ocr_py313.lock_linux_debian13.txt  vercel.json  vite.config.ts  vmill_server.py
.upsun/: config.yaml
docs/: API_DOCS_PLAN.md  FACTORY_STRICT_BACKLOG.md  MODULE_TUTORIAL.md  OCR_API_OPENAPI_GUIDE.md  ocr_openapi.v1.yaml  openapi.v1.yaml
machine-core/: Cargo.toml
machine-core/pkg/: machine_core.d.ts  machine_core.js  machine_core_bg.wasm  machine_core_bg.wasm.d.ts  package.json
machine-core/src/: lib.rs
public/: SPaCial.html  blueprint_manager.html  cnc_sim.html  contas_calc.html  factory_manager.html  logger.html  login.html  records_manager.html  shop_tree.html  structure_studio.html  theme_studio.html  translation_studio.html  video.html  vmill_hub.html
scripts/: build_portable_all_linux.sh  build_portable_all_windows.ps1  build_portable_ocr_linux.sh  build_portable_ocr_windows.ps1  build_portable_vmill_linux.sh  build_portable_vmill_windows.ps1  hosts_hint.sh  run_all.sh  run_ocr.sh  run_vmill.sh  stress_ocr_test.py  stress_sync_test.py
src/: App.tsx  ArmSimulatorModule.tsx  BottomControlBar.tsx  GCodePanel.tsx  JogPanel.tsx  MachineConfigPanel.tsx  MachineContext.tsx  MachineView.tsx  OffsetPanel.tsx  StockConfigPanel.tsx  ToolCompPanel.tsx  (+9 more)
(+59 files in other folders)
